--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -11,4 +11,4 @@
 
 <app-carrer class="section" id="carrer"></app-carrer>
 
-<app-contact-me class="section" id="contact"></app-contact-me>
+<app-contact-me class="section" id="footer"></app-contact-me>
