--- a/portfolio/src/app/header/header.component.html
+++ b/portfolio/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container item">
     <div class="row">
         <div class="side col-12 col-sm-4">
             <div class="me" [ngStyle]="{backgroundImage: 'url(' + info.image + ')'}"></div>
