--- a/portfolio/src/app/portfolio/portfolio.component.html
+++ b/portfolio/src/app/portfolio/portfolio.component.html
@@ -1,39 +1,16 @@
-<div class="portfolio">
+<div class="portfolio item">
 
-    <div class="portfolio__image main" >
-        <img src="./assets/img/avon.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image a black" name="a">
-        <img src="./assets/img/complleta.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image b green" name="b">
-        <img src="./assets/img/monterre.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image c black" name="c">
-       <img src="./assets/img/moove.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image d" name="d">
-        <img src="./assets/img/mrv.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image e black" name="e">
-        <img src="./assets/img/mvestruturas.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image f greenSoft" name="f">
-         <img src="./assets/img/quiropraxia.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image g black" name="g">
-        <img src="./assets/img/valearquitetura.png" alt="image" />
-    </div>
-
-    <div class="portfolio__image h" name="h">
-        <img src="./assets/img/vli.png" alt="image" />
+    <div class="portfolio__image main " [ngClass]="(i % 2 != 0 ? 'p_'+ i +' black' : 'p_'+ i)"  *ngFor="let portfolio of portfolio$ | async; let i = index" >
+        <img [src]="portfolio.file" alt="image" />
+        
+        <div class="portfolio__content">
+            <div class="portfolio__description">{{portfolio.description}}</div>
+            <div class="" *ngIf="portfolio.habilitado">
+                <a class="portfolio__link" [href]="portfolio.site" target="_blank">
+                    {{portfolio.site}}
+                </a>
+            </div>
+        </div>
     </div>
 
 </div>
