--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container item">
     <div class="row">
         <div class="side col-12 col-sm-4">
             <h2 class="text-subtitle">
