--- a/portfolio/src/app/skills/skills.component.html
+++ b/portfolio/src/app/skills/skills.component.html
@@ -8,15 +8,31 @@
 
         <div class="col-12 col-sm-8">
             
-            <div class="section skill">
-                <h3 class="text-sectionTitle">Structure</h3>
-            </div>
+            <div class="row">
+                <div class="skill-container col-6 col-sm-6" *ngFor="let skill of skills$ | async" >
+                    <div class="section skill">
+                        <h3 class="text-sectionTitle">
+                            {{skill.name}}
+                        </h3>
+                    </div>
 
-            <div class="section badges">
-                <span class="skill-badge">
-                    <span class="skill-description"></span>
-                    <span class="skill-level"></span>
-                </span>
+                    <div class="row skill-row">
+                        <div class="section badges col-12 col-sm-6"  *ngFor="let item of skill.skills">
+                            
+                            <div class="skill-badge">
+                                <span class="">
+                                    <span class="skill-description">
+                                        {{item.name}}
+                                    </span>
+                                    <span class="skill-level float-right">
+                                        {{item.level}}
+                                    </span>
+                                </span>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
             </div>
             
         </div>
