--- a/portfolio/src/app/contact-me/contact-me.component.html
+++ b/portfolio/src/app/contact-me/contact-me.component.html
@@ -2,21 +2,16 @@
     <div class="row">
         
         <div class="col-12 col-sm-12 text-center">
-            
-            <a class="link" target="blank" href="http://www.facebook.com/mhnakashima">
-                <fa-icon [icon]="['fab','facebook']"></fa-icon>
-            </a>
 
+            <a class="link" target="blank" href="https://www.linkedin.com/in/mhnakashima/">
+                <fa-icon [icon]="['fab','linkedin']"></fa-icon>
+            </a>
             <a class="link" target="blank" href="http://www.twitter.com/mhnakashima">
                 <fa-icon [icon]="['fab','twitter']"></fa-icon>
             </a>
 
             <a class="link" target="blank" href="http://www.instagram.com/mhnakashima">
                 <fa-icon [icon]="['fab','instagram']"></fa-icon>
-            </a>
-
-            <a class="link" target="blank" href="http://www.linkedin.com/mhnakashima">
-                <fa-icon [icon]="['fab','linkedin']"></fa-icon>
             </a>
             
         </div>
