--- a/portfolio/src/app/portfolio/portfolio.component.scss
+++ b/portfolio/src/app/portfolio/portfolio.component.scss
@@ -119,7 +119,7 @@
         -webkit-transition: all 0.2s;
         transition: all 0.2s;
 
-        bottom: -100px;
+        bottom: -100%;
         left: 0px;
         position: absolute;
         width: 100%;
