--- a/portfolio/src/app/contact-me/contact-me.component.html
+++ b/portfolio/src/app/contact-me/contact-me.component.html
@@ -6,6 +6,11 @@
             <a class="link" target="blank" href="https://www.linkedin.com/in/mhnakashima/">
                 <fa-icon [icon]="['fab','linkedin']"></fa-icon>
             </a>
+
+            <a class="link" target="blank" href="https://github.com/mhnakashima">
+                <fa-icon [icon]="['fab','github']"></fa-icon>
+            </a>
+
             <a class="link" target="blank" href="http://www.twitter.com/mhnakashima">
                 <fa-icon [icon]="['fab','twitter']"></fa-icon>
             </a>
