--- a/portfolio/src/app/about/about.component.html
+++ b/portfolio/src/app/about/about.component.html
@@ -6,16 +6,9 @@
             </h2>
         </div>
 
-        <div class="col-12 col-sm-8 ">
+        <div class="main col-12 col-sm-8 " >
             
-            <div class="text-paragraph">
-               Jogador de RPG japonês e descendente de japoneses, comecei a carreira de Front End developer criando
-               aplicações para o ramo de Ensino a Distância, isso foi um marco pois obtive a expertise para trabalhar
-               com tecnologias que são frente de mercado. Hoje, sou atleta de uma equipe de corrida e nas horas vagas
-               gosto de cozinhar, ler Azimov, Tolkien, Martin, além de ser piolho de academia e podcasts.
-               
-               E não podemos esquecer do café <fa-icon [icon]="['fas','coffee']"></fa-icon> (a força motriz de todo programador).
-            </div>
+            <div class="text-paragraph" [innerHTML] = "about.description"></div>
             
         </div>
     </div>
