--- a/portfolio/src/app/header/header.component.html
+++ b/portfolio/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             <div class="me" [ngStyle]="{backgroundImage: 'url(' + info.image + ')'}"></div>
         </div>
 
-        <div class="col-12 col-sm-8 col-md-8">
+        <div class="main col-12 col-sm-8 col-md-8">
             <h1 class="text-title">{{info.name}}</h1>
 
             <div class="text-paragraph">
