--- a/portfolio/src/app/portfolio/portfolio.component.scss
+++ b/portfolio/src/app/portfolio/portfolio.component.scss
@@ -119,19 +119,25 @@
         -webkit-transition: all 0.2s;
         transition: all 0.2s;
 
+        display: flex;
+        align-items: center;
+
         bottom: -100%;
+        height: 100%;
         left: 0px;
         position: absolute;
         width: 100%;
         
         padding: 15px;
 
+        background: #0a0a0a;
+        color: #fff;
         text-align: left;
         
     }
 
     &__description{
-        color: #0a0a0a;
+        color: #fff;
         font-family: 'lato', sans-serif;
         font-size: 1rem;
     }
@@ -141,5 +147,10 @@
         font-family: 'lato', sans-serif;
         font-size: 1rem;
         font-weight: 700;
+    }
+
+    &__title{
+        font-family: "Oswald", sans-serif;
+        font-size: 1.3rem;
     }
 }
