--- a/portfolio/src/app/skills/skills.component.html
+++ b/portfolio/src/app/skills/skills.component.html
@@ -6,7 +6,7 @@
             </h2>
         </div>
 
-        <div class="col-12 col-sm-8">
+        <div class="main col-12 col-sm-8">
             
             <div class="row">
                 <div class="skill-container col-6 col-sm-6" *ngFor="let skill of skills$ | async" >
